@@ -44,7 +44,7 @@ Image::Image() : QImage(), m_linkOnly(false) {
 // I'm using the MD5 hash as the id. I consider it rather unlikely that two images in one
 // collection could ever have the same hash, and this lets me do a fast comparison of two images
 // simply by comparing their ids.
-Image::Image(const QString& filename_) : QImage(filename_), m_linkOnly(false) {
+Image::Image(const QString& filename_, const QString& id_) : QImage(filename_), m_id(idClean(id_)), m_linkOnly(false) {
   m_format = QImageReader::imageFormat(filename_);
   if(isNull()) {
     // Tellico had an earlier bug where images were written in PNG format with a GIF extension
@@ -55,7 +55,9 @@ Image::Image(const QString& filename_) : QImage(filename_), m_linkOnly(false) {
       m_format = "PNG";
     }
   }
-  calculateID();
+  if(m_id.isEmpty()) {
+    calculateID();
+  }
 }
 
 Image::Image(const QImage& img_, const QString& format_) : QImage(img_), m_format(format_.toLatin1()), m_linkOnly(false) {
