@@ -68,7 +68,7 @@ public:
   static const Image null;
 private:
   Image();
-  explicit Image(const QString& filename);
+  explicit Image(const QString& filename, const QString& id = QString());
   Image(const QImage& image, const QString& format);
   Image(const QByteArray& data, const QString& format, const QString& id);
 
