@@ -114,6 +114,8 @@ private :
 
 #if defined(TELLICO_LOG) && !defined(WIN32)
 // see http://www.gnome.org/~federico/news-2006-03.html#timeline-tools
+// strace -ttt -f -o /tmp/logfile.strace src/tellico
+// plot-timeline.py -o prettygraph.png /tmp/logfile.strace
 #define MARK do { \
     char str[128]; \
     ::snprintf(str, 128, "MARK: %s: %s (%d)", metaObject()->className(), MY_FUNCTION, __LINE__); \
